examples/checker_tests/bad/dupfields.p4
struct S {
    bit<32> a;
    bit<32> a;
}